k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollive-redis
  namespace: ollive-assignment
spec:
  selector:
    app: ollive-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollive-redis
  namespace: ollive-assignment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollive-redis
  template:
    metadata:
      labels:
        app: ollive-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10
            periodSeconds: 20
