k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollive-app
  namespace: ollive-assignment
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: ollive.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollive-app
                port:
                  number: 80
